Fix channel buttons on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -225,7 +225,7 @@ footer {
 
   .actionBar {
     flex-wrap: wrap;
-    justify-content: normal;
+    justify-content: normal !important;
   }
 
   .videoData {
